# DiegOS

./: .gitignore  Makefile  bochsout  bochsrc  boot_sect.asm  gdt.asm  memory-map.txt  readme.md  test  test_disasm
.config/: bochsrc_example
os_code/: Cargo.toml
os_code/.cargo/: config.toml
report/: report.tex
src/: link.ls
src/boot_loader/: boot_sect.asm  gdt.asm  kernel_entry.asm  switch_to_pm.asm
src/boot_loader/utility/: load_disk.asm  mem_map.asm  print.asm  print_32.asm
src/os_code/: Cargo.toml  i386-pc-none-gnu.json  i686-unknown-bare_metal.json  rust-toolchain.toml
src/os_code/.cargo/: config.toml
src/os_code/src/: Makefile  drivers.rs  interrupts.rs  main.rs  mem.rs
src/os_code/src/drivers/: keyboard.rs  screen.rs
src/os_code/src/interrupts/: handlers.rs  idt.rs  pic.rs
src/os_code/src/mem/: paging.rs
