[package]
name = "os_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]	
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
#compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
rlibc = "1.0"
volatile = "0.2.6"
